--- a/styles.css
+++ b/styles.css
@@ -14,10 +14,13 @@ body {
     padding: 20px 15px;
     text-align: center;
 }
+.carousel-section {
+
+}
 
 .carousel-display {
-    padding: 20px 15px;
     text-align: center;
+    
 }
 
 a:link, a:visited, a:active {
@@ -32,6 +35,8 @@ a:link, a:visited, a:active {
 
 section {
     background-color: #d62e58;
+
+
 }
 
 h1, h3, h4 {
@@ -54,10 +59,13 @@ p {
     height: 20%;
     width: 100%;
     text-align: center;
+    font-size: 20px;
 }
 
 footer {
-    background-color: white;
-    color: light-brown;
+    font-size:100%;
+
+    color: white;
     text-align: center;
-}
+    background-color: inherit;
+    }
